# mini-automation-framework

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  conftest.py  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  tests.yml
src/maf/api/: client.py
src/maf/core/: config.py  logger.py  runner.py
src/maf/ui/pages/: base_page.py  inventory_page.py  login_page.py
tests/api/: test_health.py
tests/ui/: test_login.py
