[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-automation-framework"
version = "0.1.0"
description = "Minimal Python automation framework using Page/Object pattern (Playwright + pytest) and API tests."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Douglas Alfaro"}]
dependencies = [
  "pytest>=7.4",
  "pytest-playwright>=0.5.0",
  "playwright>=1.46.0",
  "requests>=2.31.0",
  "typer>=0.12.0",
  "loguru>=0.7.2",
  "pydantic>=2.7.0"
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.0",
  "black>=24.4.2",
  "mypy>=1.10.0",
  "pytest-cov>=4.1.0",
  "types-requests"
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true
